--- a/week4/TMDB/TMDB/Cells/CastTableViewCell.xib
+++ b/week4/TMDB/TMDB/Cells/CastTableViewCell.xib
@@ -18,13 +18,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mYV-AW-XGB">
-                        <rect key="frame" x="0.0" y="8" width="44.666666666666664" height="67"/>
+                        <rect key="frame" x="20.000000000000004" y="8" width="50.333333333333343" height="67"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="mYV-AW-XGB" secondAttribute="height" multiplier="2:3" id="gFl-g0-C7W"/>
+                            <constraint firstAttribute="width" secondItem="mYV-AW-XGB" secondAttribute="height" multiplier="3:4" id="gFl-g0-C7W"/>
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="AEe-H8-ATc">
-                        <rect key="frame" x="64.666666666666671" y="21.000000000000004" width="62" height="41.333333333333343"/>
+                        <rect key="frame" x="90.333333333333329" y="21.000000000000004" width="218.66666666666669" height="41.333333333333343"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ylh-wn-Nde">
                                 <rect key="frame" x="0.0" y="0.0" width="46" height="20.333333333333332"/>
@@ -42,11 +42,12 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="mYV-AW-XGB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="6d3-HG-CfG"/>
+                    <constraint firstItem="mYV-AW-XGB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="6d3-HG-CfG"/>
                     <constraint firstAttribute="bottom" secondItem="mYV-AW-XGB" secondAttribute="bottom" constant="8" id="6qs-53-PWa"/>
                     <constraint firstItem="mYV-AW-XGB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="8aY-eC-v4N"/>
                     <constraint firstItem="AEe-H8-ATc" firstAttribute="leading" secondItem="mYV-AW-XGB" secondAttribute="trailing" constant="20" id="SJW-bc-hWe"/>
                     <constraint firstItem="AEe-H8-ATc" firstAttribute="centerY" secondItem="mYV-AW-XGB" secondAttribute="centerY" id="x3S-kp-dPg"/>
+                    <constraint firstAttribute="trailing" secondItem="AEe-H8-ATc" secondAttribute="trailing" constant="20" id="zZC-LB-X6X"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
