--- a/week5/Media/Media/Cells/MovieTableViewCell.xib
+++ b/week5/Media/Media/Cells/MovieTableViewCell.xib
@@ -18,42 +18,50 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gSJ-f3-HbG">
-                        <rect key="frame" x="7.9999999999999964" y="8" width="60.666666666666657" height="81"/>
+                        <rect key="frame" x="9.9999999999999964" y="8" width="60.666666666666657" height="81"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="gSJ-f3-HbG" secondAttribute="height" multiplier="3:4" id="Rxg-Gd-wwq"/>
                         </constraints>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="jAU-MS-5LF">
-                        <rect key="frame" x="78.666666666666671" y="17" width="225.33333333333331" height="63"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="제목" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d1M-UH-Qvl">
-                                <rect key="frame" x="0.0" y="0.0" width="225.33333333333334" height="20.333333333333332"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="평점 • 2023" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L5u-Rl-IHe">
-                                <rect key="frame" x="0.0" y="21.333333333333336" width="225.33333333333334" height="20.333333333333336"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="줄거리" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zfb-Fr-Xkz">
-                                <rect key="frame" x="0.0" y="42.666666666666664" width="225.33333333333334" height="20.333333333333336"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                    </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="제목" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d1M-UH-Qvl">
+                        <rect key="frame" x="78.666666666666671" y="14" width="219.33333333333331" height="22"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="22" id="0H9-Xu-Zbi"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="줄거리" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zfb-Fr-Xkz">
+                        <rect key="frame" x="78.666666666666671" y="58.000000000000007" width="219.33333333333331" height="20.333333333333336"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="평점 • 2023" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L5u-Rl-IHe">
+                        <rect key="frame" x="78.666666666666671" y="36" width="219.33333333333331" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="18" id="RzT-8l-1Dc"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="jAU-MS-5LF" firstAttribute="leading" secondItem="gSJ-f3-HbG" secondAttribute="trailing" constant="10" id="3z1-4m-8mm"/>
-                    <constraint firstAttribute="trailing" secondItem="jAU-MS-5LF" secondAttribute="trailing" constant="8" id="9qK-a0-V7m"/>
                     <constraint firstItem="gSJ-f3-HbG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="Feu-Os-J09"/>
+                    <constraint firstItem="d1M-UH-Qvl" firstAttribute="leading" secondItem="gSJ-f3-HbG" secondAttribute="trailing" constant="8" id="GtW-qJ-0iR"/>
+                    <constraint firstItem="L5u-Rl-IHe" firstAttribute="top" secondItem="d1M-UH-Qvl" secondAttribute="bottom" id="OJy-av-Rt9"/>
+                    <constraint firstItem="d1M-UH-Qvl" firstAttribute="top" secondItem="gSJ-f3-HbG" secondAttribute="top" constant="6" id="dgh-cK-5pT"/>
+                    <constraint firstItem="L5u-Rl-IHe" firstAttribute="leading" secondItem="d1M-UH-Qvl" secondAttribute="leading" id="eT5-FY-3BZ"/>
                     <constraint firstAttribute="bottom" secondItem="gSJ-f3-HbG" secondAttribute="bottom" constant="8" id="fxq-r1-35w"/>
-                    <constraint firstItem="jAU-MS-5LF" firstAttribute="centerY" secondItem="gSJ-f3-HbG" secondAttribute="centerY" id="lXF-mW-TBi"/>
-                    <constraint firstItem="gSJ-f3-HbG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="uXR-ZP-h9a"/>
+                    <constraint firstItem="Zfb-Fr-Xkz" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="gSJ-f3-HbG" secondAttribute="bottom" constant="-6" id="hAD-vN-YP6"/>
+                    <constraint firstItem="Zfb-Fr-Xkz" firstAttribute="leading" secondItem="d1M-UH-Qvl" secondAttribute="leading" id="liZ-xB-AdY"/>
+                    <constraint firstItem="L5u-Rl-IHe" firstAttribute="trailing" secondItem="d1M-UH-Qvl" secondAttribute="trailing" id="pPA-qX-Buq"/>
+                    <constraint firstAttribute="trailing" secondItem="d1M-UH-Qvl" secondAttribute="trailing" constant="14" id="pnE-8t-a1G"/>
+                    <constraint firstItem="Zfb-Fr-Xkz" firstAttribute="top" secondItem="L5u-Rl-IHe" secondAttribute="bottom" constant="4" id="swT-ho-LWf"/>
+                    <constraint firstItem="Zfb-Fr-Xkz" firstAttribute="trailing" secondItem="d1M-UH-Qvl" secondAttribute="trailing" id="tNa-d7-9BY"/>
+                    <constraint firstItem="gSJ-f3-HbG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="uXR-ZP-h9a"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
