--- a/week5/Media/Media/Cells/Video/VideoCollectionViewCell.xib
+++ b/week5/Media/Media/Cells/Video/VideoCollectionViewCell.xib
@@ -11,20 +11,20 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="VideoCollectionViewCell" id="gTV-IL-0wX" customClass="VideoCollectionViewCell" customModule="Media" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="277" height="156"/>
+            <rect key="frame" x="0.0" y="0.0" width="277" height="208"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="277" height="156"/>
+                <rect key="frame" x="0.0" y="0.0" width="277" height="208"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Sy5-gI-AqW">
-                        <rect key="frame" x="0.0" y="0.0" width="277" height="156"/>
+                        <rect key="frame" x="0.0" y="0.0" width="277" height="207.66666666666666"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="Sy5-gI-AqW" secondAttribute="height" multiplier="533:300" id="Xy5-Ey-3Dg"/>
+                            <constraint firstAttribute="width" secondItem="Sy5-gI-AqW" secondAttribute="height" multiplier="4:3" id="Xy5-Ey-3Dg"/>
                         </constraints>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T69-lN-T7H">
-                        <rect key="frame" x="112.66666666666667" y="52" width="51.666666666666671" height="52"/>
+                        <rect key="frame" x="104" y="69.333333333333343" width="69" height="69.333333333333343"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="T69-lN-T7H" secondAttribute="height" multiplier="1:1" id="t5A-OE-bQa"/>
                         </constraints>
@@ -45,12 +45,12 @@
                 <constraint firstItem="T69-lN-T7H" firstAttribute="centerX" secondItem="Sy5-gI-AqW" secondAttribute="centerX" id="bhR-cv-XS3"/>
                 <constraint firstItem="T69-lN-T7H" firstAttribute="centerY" secondItem="Sy5-gI-AqW" secondAttribute="centerY" id="lqT-HJ-6nf"/>
             </constraints>
-            <size key="customSize" width="277" height="156"/>
+            <size key="customSize" width="277" height="208"/>
             <connections>
                 <outlet property="playButton" destination="T69-lN-T7H" id="mC2-gp-1bm"/>
                 <outlet property="thumbnailImageView" destination="Sy5-gI-AqW" id="K08-qk-pNL"/>
             </connections>
-            <point key="canvasLocation" x="303.05343511450383" y="24.647887323943664"/>
+            <point key="canvasLocation" x="303.05343511450383" y="42.95774647887324"/>
         </collectionViewCell>
     </objects>
     <resources>
