--- a/006_Bookworm/Bookworm/BookshelfCollectionViewCell.xib
+++ b/006_Bookworm/Bookworm/BookshelfCollectionViewCell.xib
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -47,12 +48,29 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4pb-Zn-Ymq">
+                        <rect key="frame" x="65" y="7" width="35" height="35"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="35" id="3sS-Nh-Dja"/>
+                            <constraint firstAttribute="height" constant="35" id="Mxt-de-Lw5"/>
+                        </constraints>
+                        <color key="tintColor" systemColor="systemGrayColor"/>
+                        <state key="normal" title="Button"/>
+                        <buttonConfiguration key="configuration" style="plain" image="bookmark" catalog="system" title="">
+                            <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="24"/>
+                        </buttonConfiguration>
+                        <connections>
+                            <action selector="bookMarkButtonClicked:" destination="gTV-IL-0wX" eventType="touchUpInside" id="7em-XM-zbS"/>
+                        </connections>
+                    </button>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
                 <constraint firstItem="9Kf-qO-uia" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="0DQ-ME-eTf"/>
+                <constraint firstItem="4pb-Zn-Ymq" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="7" id="6Bo-pl-VGf"/>
                 <constraint firstItem="Jhg-A3-Z1Y" firstAttribute="top" secondItem="TSN-Gw-bXT" secondAttribute="bottom" constant="5" id="75X-qc-hdz"/>
+                <constraint firstAttribute="trailing" secondItem="4pb-Zn-Ymq" secondAttribute="trailing" constant="10" id="NmU-eL-pBi"/>
                 <constraint firstItem="2fV-Oo-NKY" firstAttribute="top" secondItem="9Kf-qO-uia" secondAttribute="bottom" constant="8" id="YmH-ap-gE2"/>
                 <constraint firstItem="9Kf-qO-uia" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="eZ1-zb-9o4"/>
                 <constraint firstItem="Jhg-A3-Z1Y" firstAttribute="trailing" secondItem="9Kf-qO-uia" secondAttribute="trailing" id="kcq-Of-4Dz"/>
@@ -68,10 +86,17 @@
             <connections>
                 <outlet property="bookImageView" destination="9Kf-qO-uia" id="BVD-Vr-tfv"/>
                 <outlet property="bookInfoLabel" destination="TSN-Gw-bXT" id="wTM-fB-7wf"/>
+                <outlet property="bookMarkButton" destination="4pb-Zn-Ymq" id="cQq-sz-pYT"/>
                 <outlet property="bookPriceLabel" destination="Jhg-A3-Z1Y" id="Aao-W5-Tc3"/>
                 <outlet property="bookTitleLabel" destination="2fV-Oo-NKY" id="B3r-uc-KLF"/>
             </connections>
             <point key="canvasLocation" x="175.57251908396947" y="50"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="bookmark" catalog="system" width="110" height="128"/>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
